# obsidian-tmdb-cover

./: .golangci.yml  AGENTS.md  CLAUDE.md  README.md  Taskfile.yml  fetch_tv_details.py  go.mod  go.sum  obsidian-cover.py  pyproject.toml
.github/workflows/: ci.yml
cmd/obsidian-tmdb-cover/: main.go
internal/app/: app.go
internal/content/: builder.go
internal/note/: note.go  note_test.go
internal/tmdb/: client.go  client_internal_test.go
internal/tui/: select.go
internal/util/: files.go
obsidian_tmdb_cover/: __init__.py  cli.py  content_builder.py  fetcher.py  tui.py  updater.py
pkg/: README.md
tests/: test_metadata.py
