[project]
name = "obsidian-tmdb-cover"
version = "0.1.0"
description = "Add TMDB cover images to Obsidian notes"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "pillow>=10.0.0",
]

[project.scripts]
obsidian-cover = "obsidian-tmdb-cover:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests",
    "types-PyYAML",
]